feat Add travis

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,8 @@ client/lib
 
 # SQLite database
 *.sqlite
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
