--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Meetups on the fly",
   "main": "server.js",
   "scripts": {
-    "test": "karma start --browsers PhantomJS"
+    "test": "./node_module/.bin/karma start --browsers PhantomJS"
   },
   "author": "",
   "license": "ISC",
