--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: node_js
 node_js:
 - '0.10'
+before_install:
+  - 'npm install -g grunt-cli'
+  - 'npm install grunt'
+  - 'npm install karma'
+  - 'npm install karma-phantomjs-launcher'
 deploy:
   provider: elasticbeanstalk
   region: us-west-1
