--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ node_js:
 - '0.10'
 before_install:
   - 'npm install -g grunt-cli'
-  - 'npm install grunt'
-  - 'npm install karma'
-  - 'npm install karma-phantomjs-launcher'
+  - 'npm install -g grunt'
+  - 'npm install -g karma'
+  - 'npm install -g karma-phantomjs-launcher'
 deploy:
   provider: elasticbeanstalk
   region: us-west-1
