--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mocha": "^1.20.1"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.4.3",
     "express": "^4.4.5",
     "grunt-contrib-jshint": "^0.11.0",
