(cleanup) wrote powerful and fast gulpfile for development; cleaned up a lot of old/unused files; moved things around a touch

--- a/.gitignore
+++ b/.gitignore
@@ -26,8 +26,9 @@ build/
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
 node_modules/
 bower_components/
+client/lib/
+client/dist/
 server/keys.js
-client/lib
 
 # SQLite database
 *.sqlite
