--- a/bower.json
+++ b/bower.json
@@ -6,17 +6,21 @@
   "ignore": [
     "**/.*",
     "node_modules",
-    "bower_components",
-    "client/lib"
+    "bower_components"
   ],
   "dependencies": {
-    "angular-mocks": "~1.2.18",
-    "angular-ui-router": "~0.2.13",
-    "angular-route": "~1.2.18",
+    "angular": "*",
+    "angular-ui-router": "*",
+    "angular-route": "*",
     "jquery": "~2.1.3",
     "bootstrap": "~3.3.2"
   },
-  "resolutions": {
-    "angular": "1.3.9"
-  }
+  "overwrite": {
+    "bootstrap": {
+      "main": [
+        "dist/css/bootstrap.css",
+        "dist/js/bootstrap.js"
+      ] 
+    } 
+  } 
 }
