--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "boundless-avacado",
   "version": "0.0.1",
   "description": "Meetups on the fly",
-  "main": "server.js",
+  "main": "server/server.js",
   "author": "",
   "license": "ISC",
   "repository": {
@@ -11,7 +11,19 @@
   },
   "devDependencies": {
     "angular-mocks": "^1.3.11",
-    "grunt-istanbul-coverage": "^0.1.1",
+    "browser-sync": "^2.0.0-rc5",
+    "gulp": "^3.8.10",
+    "gulp-concat": "^2.4.3",
+    "gulp-inject": "^1.1.1",
+    "gulp-install": "^0.2.0",
+    "gulp-jshint": "^1.9.2",
+    "gulp-livereload": "^3.7.0",
+    "gulp-load-plugins": "^0.8.0",
+    "gulp-minify-css": "^0.4.4",
+    "gulp-nodemon": "^1.0.5",
+    "gulp-rename": "^1.2.0",
+    "gulp-sequence": "^0.3.1",
+    "gulp-uglify": "^1.1.0",
     "jasmine-core": "^2.2.0",
     "karma": "^0.12.31",
     "karma-chai": "^0.1.0",
@@ -19,19 +31,15 @@
     "karma-jasmine": "^0.3.5",
     "karma-mocha": "^0.1.10",
     "karma-phantomjs-launcher": "^0.1.4",
-    "mocha": "^1.20.1"
+    "main-bower-files": "^2.5.0",
+    "mocha": "^1.20.1",
+    "stream-series": "^0.1.1"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.4.3",
+    "connect-livereload": "^0.5.2",
     "express": "^4.4.5",
-    "grunt-contrib-jshint": "^0.11.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-karma": "^0.10.1",
-    "grunt-mocha-test": "^0.12.7",
-    "grunt-nodemon": "^0.4.0",
-    "grunt-shell": "^1.1.1",
-    "grunt-simple-mocha": "^0.4.0",
     "morgan": "^1.1.1",
     "multiparty": "^4.1.1",
     "mysql": "^2.5.4",
