--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "body-parser": "^1.4.3",
     "connect-livereload": "^0.5.2",
     "express": "^4.4.5",
+    "jwt-simple": "^0.2.0",
     "morgan": "^1.1.1",
     "multiparty": "^4.1.1",
     "mysql": "^2.5.4",
