--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "type": "git",
     "url": "https://github.com/Boundless-Avocado/Boundless-Avocado.git"
   },
+  "scripts": {
+    "start": "server/server.js"
+  },
   "devDependencies": {
     "angular-mocks": "^1.3.11",
     "browser-sync": "^2.0.0-rc5",
