--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "https://github.com/Boundless-Avocado/Boundless-Avocado.git"
   },
   "scripts": {
-    "start": "server/server.js"
+    "start": "node server/server.js"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.11",
