(deployment) added postinstall command to package json to run bower install on the server

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "url": "https://github.com/Boundless-Avocado/Boundless-Avocado.git"
   },
   "scripts": {
+    "postinstall": "whoami; bower install", 
     "start": "node server/server.js"
   },
   "devDependencies": {
