(deployment) fix postinstall script so that travis won't short circuit when it can't find bower, will just ignore

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "https://github.com/Boundless-Avocado/Boundless-Avocado.git"
   },
   "scripts": {
-    "postinstall": "whoami; bower install", 
+    "postinstall": "whoami; bower install || echo 'BOWER NOT AVAILABLE';", 
     "start": "node server/server.js"
   },
   "devDependencies": {
